# gm-connect

./: .env.example  .gitignore  pyproject.toml  setup.cfg  to_do.md
gm_connect/: __init__.py  client.py  config.py  reader.py  sender.py
src/gm_connect/: __init__.py  manager.py  reader.py  sender.py
tests/: bulk_send.py  test_gmconnect.py
