[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gm-connect"
version = "0.1.0"
description = "A Python module + CLI to read, send, delete, and organize emails"
authors = [
    { name="Nitesh Mhatre", email="n.mhatre90@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
]

[project.scripts]
gmconnect = "gmconnect.cli:app"