[metadata]
name = gm-connect
version = B0.1.0
author = Nitesh Mhatre
author_email = n.mhatre90@gmail.com
description = Gmail connect library for sending, reading, deleting, and organizing emails
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nitesh-mhatre/gm-connect
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Communications :: Email

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src